@@ -6,6 +6,8 @@ changes relative to sbcl-2.2.5:
   * optimization: fasl files are now usually smaller (up to 10% on default
     policy) and may load faster, especially on high debug.
   * optimization: faster [n]string-down/upcase.
+  * optimization: faster [n]reverse for 8- and 32-bit element vectors on
+    arm64, x86-64.
 
 changes in sbcl-2.2.5 relative to sbcl-2.2.4:
   * minor incompatible change: SB-EXT:*DERIVE-FUNCTION-TYPES* being NIL now
